# python-scrapper

./: .gitignore  README.md  file.py  instagram_posts.xlsx  main.py  playwright_test.py  pyproject.toml  python.csv  react.csv  requirements.txt  selen.py  sub.py  test-img-swap.py
extractor/: indeed.py  wwr.py
first_scrap_html/: download_img_url.py  get_naver_blog_html.py  get_youtube_urls.py  instagram.py  playwright_html.py  playwright_html2.py  x_api.py
first_scrap_html/meta/: down_insta_sel.py  down_instagram.py  instagram.py  instagram_api.py
first_scrap_html/n/: get_naver_blog_html.py  get_naver_blog_playwright_html.py  get_naver_playwright_html.py  request_html.py
first_scrap_html/playwright/: playwright_html.py  playwright_html2.py
first_scrap_html/selenium/: async_selenium_html.py  selenium_html.py
first_scrap_html/x/: down_x.py  down_x_login.py  x_api.py
first_scrap_html/yt/: get_youtube_urls.py  get_youtube_urls_and_download.py  get_youtube_urls_async.py  test_download_youtube.py
scrap_html/: playwright_html.py  request_html.py  selenium_html.py
templates/: home.html  search.html
tests/: getViewFiel.py  post_test.py
