[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["clean17 <piw940317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
autopep8 = "2.0.2"
beautifulsoup4 = "4.12.2"
blinker = "1.4"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
cryptography = "3.4.8"
distro = "1.7.0"
httplib2 = "0.20.2"
idna = "3.4"
importlib-metadata = "4.6.4"
jeepney = "0.7.1"
keyring = "23.5.0"
launchpadlib = "1.10.16"
lazr-restfulclient = "0.14.4"
lazr-uri = "1.0.6"
more-itertools = "8.10.0"
oauthlib = "3.2.0"
pycodestyle = "2.10.0"
pyjwt = "2.3.0"
pyparsing = "2.4.7"
requests = "2.31.0"
secretstorage = "3.3.1"
six = "1.16.0"
soupsieve = "2.4.1"
urllib3 = "2.0.4"
wadllib = "1.3.6"
zipp = "1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
